Screenshare when whiteboard is open

--- a/lang/main-ar.json
+++ b/lang/main-ar.json
@@ -631,6 +631,7 @@
         "closeChat": "",
         "documentClose": "أغلق المستند المشترَك",
         "documentOpen": "افتح المستند المشترك",
+        "whiteboard": "",
         "download": "قم بتنزيل تطبيقاتنا",
         "enterFullScreen": "اعرض كامل الشاشة",
         "enterTileView": "أدخل وضع عرض المربعات",
@@ -647,6 +648,7 @@
         "moreOptions": "خيارات أخرى",
         "mute": "",
         "muteEveryone": "اكتم الجميع",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
         "noAudioSignalDescSuggestion": "",
