--- a/lang/main-cs.json
+++ b/lang/main-cs.json
@@ -624,6 +624,7 @@
         "closeChat": "",
         "documentClose": "Otevřít / Zavřít sdílený dokument",
         "documentOpen": "Otevřít / Zavřít sdílený dokument",
+        "whiteboard": "",
         "enterFullScreen": "Přepnout na celou obrazovku",
         "enterTileView": "Přepnout režim zobrazení",
         "exitFullScreen": "",
@@ -636,6 +637,7 @@
         "lowerYourHand": "",
         "moreActions": "Možností",
         "mute": "Ztlumit / Zesílit",
+        "unMuteEveryone": "",
         "openChat": "",
         "pip": "",
         "profile": "Upravit váš profil",
