--- a/lang/main-es.json
+++ b/lang/main-es.json
@@ -703,6 +703,7 @@
         "closeChat": "Cerrar chat",
         "documentClose": "Cerrar documento compartido",
         "documentOpen": "Abrir documento compartido",
+        "whiteboard": "",
         "download": "Descarga nuestras aplicaciones",
         "e2ee": "Cifrado Extremo-a-Extremo",
         "enterFullScreen": "Ver pantalla completa",
@@ -720,6 +721,7 @@
         "moreOptions": "Más opciones",
         "mute": "Activar o silenciar el micrófono",
         "muteEveryone": "Silenciar a todos",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "¡No hay entrada proveniente de su micrófono!",
         "noAudioSignalDesc": "Si no lo silenció a propósito desde la configuración del sistema o el dispositivo, considere cambiar el dispositivo.",
         "noAudioSignalDescSuggestion": "Si no lo silenció a propósito desde la configuración del sistema o el dispositivo, considere usar el siguiente dispositivo:",
