--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -704,6 +704,7 @@
         "closeChat": "Cerrar chat",
         "documentClose": "Cerrar documento compartido",
         "documentOpen": "Abrir documento compartido",
+        "whiteboard": "",
         "download": "Descargar nuestras aplicaciones",
         "e2ee": "Cifrado Extremo-a-Extremo",
         "enterFullScreen": "Ver pantalla completa",
@@ -720,6 +721,7 @@
         "moreActions": "Acciones",
         "moreOptions": "Más opciones",
         "mute": "Activar o silenciar el micrófono",
+        "unMuteEveryone": "Unmute everyone",
         "muteEveryone": "Silenciar a todos",
         "noAudioSignalTitle": "¡No hay ninguna entrada que provenga de su micrófono!",
         "noAudioSignalDesc": "Si no lo silenció intencionalmente desde la configuración del sistema o el hardware, considere la posibilidad de cambiar el dispositivo.",
