--- a/lang/main-fa.json
+++ b/lang/main-fa.json
@@ -606,6 +606,7 @@
         "closeChat": "",
         "documentClose": "",
         "documentOpen": "",
+        "whiteboard": "",
         "download": "",
         "enterFullScreen": "نمایش تمام صفحه",
         "enterTileView": "",
@@ -620,6 +621,7 @@
         "lowerYourHand": "",
         "moreActions": "کارهای بیشتر",
         "mute": "قطع / وصل صدا",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
         "noAudioSignalDescSuggestion": "",
