--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -584,6 +584,7 @@
         "closeChat": "Chiudi chat",
         "documentClose": "Chiudi documento condiviso",
         "documentOpen": "Apri documento condiviso",
+        "whiteboard": "",
         "enterFullScreen": "Visualizza a schermo intero",
         "enterTileView": "Vedi tutti i partecipanti",
         "exitFullScreen": "Esci da schermo intero",
@@ -597,6 +598,7 @@
         "moreActions": "Azioni",
         "moreOptions": "Più opzioni",
         "mute": "Microfono Attiva / Disattiva",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Apri una chat",
         "pip": "Abilita visualizzazione immagine nell’immagine",
         "profile": "Modifica profilo",
