--- a/lang/main-ja.json
+++ b/lang/main-ja.json
@@ -582,6 +582,7 @@
         "closeChat": "チャットを閉じる",
         "documentClose": "共有ドキュメントを閉じる",
         "documentOpen": "共有ドキュメントを開く",
+        "whiteboard": "",
         "enterFullScreen": "フルスクリーン表示",
         "enterTileView": "タイルビューを開始",
         "exitFullScreen": "フルスクリーンを終了",
@@ -594,6 +595,7 @@
         "lowerYourHand": "手を下げる",
         "moreActions": "その他のアクション",
         "mute": "ミュート / ミュート解除",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "チャットを開く",
         "pip": "Picture-in-Pictureモードに入る",
         "profile": "プロファイル編集",
