--- a/lang/main-oc.json
+++ b/lang/main-oc.json
@@ -655,6 +655,7 @@
         "closeChat": "Tampar la messatjariá",
         "documentClose": "Tampar los documents partejats",
         "documentOpen": "Dobrir los documents partejats",
+        "whiteboard": "",
         "download": "Telecargar nòstra aplicacion",
         "enterFullScreen": "Veire l’ecran complèt",
         "enterTileView": "Dintrar dins la vista mosaïca",
@@ -669,6 +670,7 @@
         "lowerYourHand": "Baissar la man",
         "moreActions": "Mai d’opcions",
         "mute": "Mut / Actiu",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "I a pas cap de son en entrada del microfòn !",
         "noAudioSignalDesc": "S’avètz pas volontàriament copat lo son a partir dels paramètres sistèma o material, pensatz de cambiar d’aparelh.",
         "noAudioSignalDescSuggestion": "S’avètz pas volontàriament copat lo son a partir dels paramètres sistèma o material, pensatz d’utilizar un autre aparelh suggerit.",
