--- a/lang/main-ptBR.json
+++ b/lang/main-ptBR.json
@@ -630,6 +630,7 @@
         "closeChat": "Fechar chat",
         "documentClose": "Fechar documento compartilhado",
         "documentOpen": "Abrir documento compartilhado",
+        "whiteboard": "",
         "download": "Baixe nossos aplicativos",
         "enterFullScreen": "Ver em tela cheia",
         "enterTileView": "Entrar em exibição de bloco",
@@ -644,6 +645,7 @@
         "lowerYourHand": "Baixar a mão",
         "moreActions": "Ações",
         "mute": "Mudo / Não mudo",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Não há entrada de áudio vindo do seu microfone!",
         "noAudioSignalDesc": "Se você não o desativou propositalmente das configurações do sistema ou do hardware, considere trocar o dispositivo.",
         "noAudioSignalDescSuggestion": "Se você não o desativou propositalmente das configurações do sistema ou do hardware, considere trocar para o dispositivo sugerido.",
