--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -778,6 +778,7 @@
         "closeChat": "Закрыть чат",
         "documentClose": "Закрыть общий документ",
         "documentOpen": "Открыть общий документ",
+        "whiteboard": "Доска",
         "download": "Скачать приложение",
         "e2ee": "Сквозное шифрование",
         "embedMeeting": "Встроить встречу",
@@ -798,6 +799,7 @@
         "moreOptions": "Больше настроек",
         "mute": "Микрофон (вкл./выкл.)",
         "muteEveryone": "Выкл. микрофон у всех",
+        "unMuteEveryone": "Включить всех",
         "noAudioSignalDesc": "Если вы специально не отключали микрофон в системных настройках, подумайте о том, чтобы поменять его.",
         "noAudioSignalDescSuggestion": "Если вы специально не отключали микрофон в системных настройках, вы можете попробовать использовать следующее устройство:",
         "noAudioSignalDialInDesc": "Вы можете также дозвониться используя:",
