--- a/lang/main-zhCN.json
+++ b/lang/main-zhCN.json
@@ -611,6 +611,7 @@
         "closeChat": "关闭聊天",
         "documentClose": "关闭文档共享",
         "documentOpen": "开启文档共享",
+        "whiteboard": "",
         "download": "下载应用",
         "enterFullScreen": "开启全屏",
         "enterTileView": "切换视图",
@@ -625,6 +626,7 @@
         "lowerYourHand": "放手",
         "moreActions": "更多操作",
         "mute": "静音 / 解除静音",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
         "noAudioSignalDescSuggestion": "",
