--- a/lang/main-de.json
+++ b/lang/main-de.json
@@ -722,6 +722,7 @@
         "closeChat": "Chat schließen",
         "documentClose": "Geteiltes Dokument schließen",
         "documentOpen": "Geteiltes Dokument öffnen",
+        "whiteboard": "",
         "download": "Unsere Apps herunterladen",
         "e2ee": "Ende-zu-Ende-Verschlüsselung",
         "embedMeeting": "Konferenz einbetten",
@@ -742,6 +743,7 @@
         "moreOptions": "Weitere Optionen",
         "mute": "Stummschaltung aktivieren / deaktivieren",
         "muteEveryone": "Alle stummschalten",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "Es kommt kein Input von Ihrem Mikrofon!",
         "noAudioSignalDesc": "Wenn Sie das Gerät nicht absichtlich über die Systemeinstellungen oder die Hardware stumm geschaltet haben, sollten Sie einen Wechsel des Geräts in Erwägung ziehen.",
         "noAudioSignalDescSuggestion": "Wenn Sie das Gerät nicht absichtlich über die Systemeinstellungen oder die Hardware stummgeschaltet haben, sollten Sie einen Wechsel auf das vorgeschlagene Gerät in Erwägung ziehen.",
