--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -631,6 +631,7 @@
         "closeChat": "Close chat",
         "documentClose": "Close Whiteboard",
         "documentOpen": "Open Whiteboard",
+        "whiteboard": "Whiteboard",
         "enterFullScreen": "View full screen",
         "enterTileView": "Enter tile view",
         "exitFullScreen": "Exit full screen",
@@ -643,6 +644,7 @@
         "lowerYourHand": "Lower your hand",
         "moreActions": "Actions",
         "mute": "Mute / Unmute",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Open chat",
         "pip": "Enter Picture-in-Picture mode",
         "profile": "Edit your profile",
