--- a/lang/main.json
+++ b/lang/main.json
@@ -744,6 +744,7 @@
         "closeChat": "Close chat",
         "documentClose": "Close Whiteboard",
         "documentOpen": "Open Whiteboard",
+        "whiteboard": "Whiteboard",
         "download": "Download our apps",
         "e2ee": "End-to-End Encryption",
         "embedMeeting": "Embed meeting",
@@ -764,6 +765,7 @@
         "moreOptions": "More options",
         "mute": "Mute / Unmute",
         "muteEveryone": "Mute everyone",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "There is no input coming from your mic!",
         "noAudioSignalDesc": "If you did not purposely mute it from system settings or hardware, consider switching the device.",
         "noAudioSignalDescSuggestion": "If you did not purposely mute it from system settings or hardware, consider switching to the suggested device.",
