--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -753,7 +753,8 @@
         "toggleCamera": "Alternar cámara",
         "videomute": "Iniciar/detener cámara",
         "startvideoblur": "Desenfocar mi fondo",
-        "stopvideoblur": "Desactivar el desenfoque de fondo"
+        "stopvideoblur": "Desactivar el desenfoque de fondo",
+        "youtube": "YouTube"
     },
     "transcribing": {
         "ccButtonTooltip": "Iniciar/detener subtítulos",
