--- a/lang/main.json
+++ b/lang/main.json
@@ -796,7 +796,8 @@
         "toggleCamera": "Toggle camera",
         "videomute": "Start / Stop camera",
         "startvideoblur": "Blur my background",
-        "stopvideoblur": "Disable background blur"
+        "stopvideoblur": "Disable background blur",
+        "youtube": "YouTube"
     },
     "transcribing": {
         "ccButtonTooltip": "Start / Stop subtitles",
