--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -667,7 +667,8 @@
         "toggleCamera": "Toggle camera",
         "videomute": "Start / Stop camera",
         "startvideoblur": "",
-        "stopvideoblur": ""
+        "stopvideoblur": "",
+        "youtube": "YouTube"
     },
     "transcribing": {
         "ccButtonTooltip": "Start / Stop subtitles",
