Fixed movie_player undefined issue

--- a/lang/main.json
+++ b/lang/main.json
@@ -853,6 +853,7 @@
     },
     "videothumbnail": {
         "domute": "Mute",
+        "doUnMute": "Unmute",
         "domuteOthers": "Mute everyone else",
         "flip": "Flip",
         "grantModerator": "Grant Moderator",
