--- a/lang/main.json
+++ b/lang/main.json
@@ -481,6 +481,8 @@
         "mutedTitle": "You're muted!",
         "mutedRemotelyTitle": "You have been muted by {{participantDisplayName}}!",
         "mutedRemotelyDescription": "You can always unmute when you're ready to speak. Mute back when you're done to keep noise away from the meeting.",
+        "unMutedRemotelyTitle": "You have been un muted by {{participantDisplayName}}!",
+        "unMutedRemotelyDescription": "You can always mute when you're not ready to speak.",
         "passwordRemovedRemotely": "$t(lockRoomPasswordUppercase) removed by another participant",
         "passwordSetRemotely": "$t(lockRoomPasswordUppercase) set by another participant",
         "raisedHand": "{{name}} would like to speak.",
