Added youtube popup for the first time users

--- a/lang/main.json
+++ b/lang/main.json
@@ -245,6 +245,7 @@
         "muteParticipantButton": "Mute",
         "muteParticipantDialog": "Are you sure you want to mute this participant? You won't be able to unmute them, but they can unmute themselves at any time.",
         "muteParticipantTitle": "Mute this participant?",
+        "notice": "Notice!",
         "Ok": "OK",
         "passwordLabel": "The meeting has been locked by a participant. Please enter the $t(lockRoomPassword) to join.",
         "passwordNotSupported": "Setting a meeting $t(lockRoomPassword) is not supported.",
@@ -283,6 +284,7 @@
         "serviceUnavailable": "Service unavailable",
         "sessTerminated": "Call terminated",
         "Share": "Share",
+        "shareVideoGuide": "In order to watch a video simultaneously, each participant should play the video by himself/herself",
         "shareVideoLinkError": "Please provide a correct youtube link.",
         "shareVideoTitle": "Share a video",
         "shareYourScreen": "Share your screen",
