Added youtube popup for the first time users

--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -212,6 +212,7 @@
         "muteParticipantButton": "Mute",
         "muteParticipantDialog": "Are you sure you want to mute this participant? You won't be able to unmute them, but they can unmute themselves at any time.",
         "muteParticipantTitle": "Mute this member?",
+        "notice": "Notice!",
         "Ok": "Ok",
         "passwordLabel": "Password",
         "passwordNotSupported": "Setting a meeting password is not supported.",
@@ -245,6 +246,7 @@
         "serviceUnavailable": "Service unavailable",
         "sessTerminated": "Call terminated",
         "Share": "Share",
+        "shareVideoGuide": "In order to watch a video simultaneously, each participant should play the video by himself/herself",
         "shareVideoLinkError": "Please provide a correct youtube link.",
         "shareVideoTitle": "Share a video",
         "shareYourScreen": "Share your screen",
