--- a/lang/main.json
+++ b/lang/main.json
@@ -305,6 +305,10 @@
         "unlockRoom": "Remove meeting $t(lockRoomPassword)",
         "user": "user",
         "userPassword": "user password",
+        "userJoinedTitle": "New user joined",
+        "userJoinedDescription": "{{ userDisplayName }} joined the conference!",
+        "userLeftTitle": "User left",
+        "userLeftDescription": "{{ userDisplayName }} left the conference!",
         "WaitForHostMsg": "The conference <b>{{room}}</b> has not yet started. If you are the host then please authenticate. Otherwise, please wait for the host to arrive.",
         "WaitForHostMsgWOk": "The conference <b>{{room}}</b> has not yet started. If you are the host then please press Ok to authenticate. Otherwise, please wait for the host to arrive.",
         "WaitingForHost": "Waiting for the host ...",
