Added notification for each user who joined or left the conference

--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -326,6 +326,10 @@
         "transcribing": "Расшифровка",
         "unlockRoom": "Убрать $t(lockRoomPassword)",
         "userPassword": "пароль пользователя",
+        "userJoinedTitle": "Присоединился новый пользователь",
+        "userJoinedDescription": "{{ userDisplayName }} присоединился в конференцию!",
+        "userLeftTitle": "Пользователь покинул комнату",
+        "userLeftDescription": "{{ userDisplayName }} покинул конференцию!",
         "yourEntireScreen": "Весь экран"
     },
     "documentSharing": {
