added google drive integration design

--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -644,6 +644,7 @@
         "exitFullScreen": "Exit full screen",
         "exitTileView": "Exit tile view",
         "feedback": "Leave feedback",
+        "googleDrive": "Google Drive",
         "hangup": "Leave",
         "invite": "Invite people",
         "login": "Log in",
