--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -645,6 +645,7 @@
         "exitFullScreen": "Exit full screen",
         "exitTileView": "Exit tile view",
         "feedback": "Leave feedback",
+        "googleDrive": "Google Drive",
         "hangup": "Leave",
         "help": "Help",
         "invite": "Invite people",
