--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -796,6 +796,7 @@
         "exitFullScreen": "Полный экран",
         "exitTileView": "Крупный план",
         "feedback": "Оставить отзыв",
+        "googleDrive": "Google Drive",
         "hangup": "Выход",
         "help": "Справка",
         "invite": "Пригласить",
