--- a/lang/main-uk.json
+++ b/lang/main-uk.json
@@ -652,6 +652,7 @@
         "exitFullScreen": "Повний екран",
         "exitTileView": "З наближенням",
         "feedback": "Залишити відгук",
+        "googleDrive": "Google Drive",
         "hangup": "Вихід",
         "help": "Довідка",
         "invite": "Запросити",
