--- a/lang/main.json
+++ b/lang/main.json
@@ -760,6 +760,7 @@
         "exitFullScreen": "Exit full screen",
         "exitTileView": "Exit tile view",
         "feedback": "Leave feedback",
+        "googleDrive": "Google Drive",
         "hangup": "Leave",
         "help": "Help",
         "invite": "Invite people",
