added google drive integration design

--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -793,6 +793,7 @@
         "exitFullScreen": "Полный экран",
         "exitTileView": "Крупный план",
         "feedback": "Оставить отзыв",
+        "googleDrive": "Google Drive",
         "hangup": "Выход",
         "help": "Справка",
         "invite": "Пригласить",
