--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -643,6 +643,7 @@
         "exitFullScreen": "Exit full screen",
         "exitTileView": "Exit tile view",
         "feedback": "Leave feedback",
+        "googleDrive": "Google Drive",
         "hangup": "Leave",
         "invite": "Invite people",
         "login": "Log in",
