Changed tile view thumbmail

--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -648,7 +648,7 @@
         "googleDrive": "Google Drive",
         "hangup": "Leave",
         "help": "Help",
-        "invite": "Invite people",
+        "invite": "Dial in",
         "login": "Login",
         "logout": "Logout",
         "lowerYourHand": "Lower your hand",
