--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -597,7 +597,7 @@
             "feedback": "Leave feedback",
             "fullScreen": "Toggle full screen",
             "hangup": "Leave the call",
-            "invite": "Invite people",
+            "invite": "Dial in",
             "kick": "Kick participant",
             "localRecording": "Toggle local recording controls",
             "lockRoom": "Toggle meeting password",
@@ -645,7 +645,7 @@
         "feedback": "Leave feedback",
         "googleDrive": "Google Drive",
         "hangup": "Leave",
-        "invite": "Invite people",
+        "invite": "Dial in",
         "login": "Log in",
         "logout": "Log out",
         "lowerYourHand": "Lower your hand",
