--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -646,7 +646,7 @@
         "feedback": "Leave feedback",
         "googleDrive": "Google Drive",
         "hangup": "Leave",
-        "invite": "Invite people",
+        "invite": "Dial-in",
         "login": "Log in",
         "logout": "Log out",
         "lowerYourHand": "Lower your hand",
