--- a/lang/main.json
+++ b/lang/main.json
@@ -763,7 +763,7 @@
         "googleDrive": "Google Drive",
         "hangup": "Leave",
         "help": "Help",
-        "invite": "Invite people",
+        "invite": "Dial-in",
         "lobbyButtonDisable": "Disable lobby mode",
         "lobbyButtonEnable": "Enable lobby mode",
         "login": "Login",
