--- a/lang/main-ml.json
+++ b/lang/main-ml.json
@@ -749,7 +749,7 @@
         "feedback": "Leave feedback",
         "hangup": "Leave",
         "help": "Help",
-        "invite": "Invite people",
+        "invite": "Dial-in",
         "lobbyButtonDisable": "Disable lobby mode",
         "lobbyButtonEnable": "Enable lobby mode",
         "login": "Login",
