--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -645,7 +645,7 @@
         "feedback": "Leave feedback",
         "googleDrive": "Google Drive",
         "hangup": "Leave",
-        "invite": "Dial in",
+        "invite": "Dial-in",
         "login": "Log in",
         "logout": "Log out",
         "lowerYourHand": "Lower your hand",
